--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <section class="links">
                 <h3>Contact me via</h2>
                 <ul>
-                    <li><a href="linkedin.com/in/dorapergel/"><i class="fa fa-linkedin-square icon" aria-hidden="true"></i></a></li>
-                    <li><a href="Facebook.com"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a></li>
-                    <li><a href="instagram.com"><i class="fa fa-instagram icon" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/dorapergel"><i class="fa fa-linkedin-square icon" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa fa-instagram icon" aria-hidden="true"></i></a></li>
                 </ul>
 
             </section>
